Bug 1492459: Always check langpacks for modification at startup. r=aswan a=jcristau

For most extension types, a missing or changed XPI file is not a serious
issue, since a failure to start it does not cause any real problems, and can
be rectified after startup. For language packs, though, we need to eagerly
register the resources that they provide, and if those resources are missing,
the browser becomes unusable.

This patch changes the startup modification checks to always include language
packs, even in profile directories. This will be a slight performance hit, but
language pack usage is low enough that it shouldn't affect most users.

Differential Revision: https://phabricator.services.mozilla.com/D6289